WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111814
[Mac] [WK2] platform/mac/accessibility/press-action-is-first.html fails
https://bugs.webkit.org/show_bug.cgi?id=111814
Summary
[Mac] [WK2] platform/mac/accessibility/press-action-is-first.html fails
Ryosuke Niwa
Reported
2013-03-07 20:25:42 PST
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=platform%2Fmac%2Faccessibility%2Fpress-action-is-first.html
e.g.
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r145150%20(6670)/platform/mac/accessibility/press-action-is-first-pretty-diff.html
Attachments
patch
(5.03 KB, patch)
2013-03-07 23:27 PST
,
chris fleizach
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
patch
(5.04 KB, patch)
2013-03-07 23:36 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-03-07 20:34:31 PST
Added a test expectation in
https://trac.webkit.org/r145177
.
chris fleizach
Comment 2
2013-03-07 23:27:45 PST
Created
attachment 192159
[details]
patch
Early Warning System Bot
Comment 3
2013-03-07 23:32:30 PST
Comment on
attachment 192159
[details]
patch
Attachment 192159
[details]
did not pass qt-wk2-ews (qt): Output:
http://webkit-commit-queue.appspot.com/results/16987405
chris fleizach
Comment 4
2013-03-07 23:36:43 PST
Created
attachment 192162
[details]
patch
Ryosuke Niwa
Comment 5
2013-03-08 00:26:02 PST
Comment on
attachment 192162
[details]
patch rs=me.
WebKit Review Bot
Comment 6
2013-03-08 09:01:25 PST
Comment on
attachment 192162
[details]
patch Clearing flags on attachment: 192162 Committed
r145231
: <
http://trac.webkit.org/changeset/145231
>
WebKit Review Bot
Comment 7
2013-03-08 09:01:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug