[Mac] [WK2] platform/mac/accessibility/press-action-is-first.html fails https://bugs.webkit.org/show_bug.cgi?id=111814

Reviewed by Ryosuke Niwa.

Tools:

Add the needed supportedActions() attribute to WKTestRunner.

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::supportedActions):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
(AccessibilityUIElement):
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::supportedActions):

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/130216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145231 268f45cc-cd09-0410-ab3c-d52691b4dbfc