Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp
@@ -180,6 +180,7 @@ int AccessibilityUIElement::indexForTextMarker(AccessibilityTextMarker*) { retur
 bool AccessibilityUIElement::isTextMarkerValid(AccessibilityTextMarker*) { return false; }
 PassRefPtr<AccessibilityTextMarker> AccessibilityUIElement::textMarkerForIndex(int) { return 0; }
 void AccessibilityUIElement::scrollToMakeVisible() { }
+JSRetainPtr<JSStringRef> AccessibilityUIElement::supportedActions() const { return 0; }
 #endif
 
 } // namespace WTR
